--- a/public/assets/css/forms.css
+++ b/public/assets/css/forms.css
@@ -44,7 +44,7 @@ i {
   flex-direction: column;
   background-color: rgba(0, 0, 0, 0.3);
   border: 0.5px solid white;
-  padding: 10px;
+  padding: 30px;
   height: 90%;
   max-height: 35rem;
   width: 40%;
@@ -63,6 +63,7 @@ form {
   gap: 20px;
   height: 20rem;
   font-size: 18px;
+  padding: 10px;
   text-align: center;
   font-family: "Poppins" !important;
 }
@@ -92,7 +93,7 @@ input {
   color: rgba(0, 0, 0, 0.5);
   width: 150px;
   height: 10px;
-  transition: 0.3s;
+  transition: 0.5s;
   border: none;
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
   background: transparent !important;
@@ -102,8 +103,14 @@ input {
   font-family: "Poppins" !important;
 }
 
+/* #username,
+#email,
+#password {
+  height: 50px !important;
+} */
+
 input:focus {
-  height: 11px;
+  height: 50px;
 }
 
 input:focus::placeholder {
